Bug 153857 - Writer hangs or crashes when right-clicking on form field
Summary: Writer hangs or crashes when right-clicking on form field
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: high critical
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Context-Menu Form-Controls
  Show dependency treegraph
 
Reported: 2023-02-27 13:55 UTC by stragu
Modified: 2023-03-02 23:40 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description stragu 2023-02-27 13:55:18 UTC
Steps:
1. Open Writer
2. Check that design mode is on: Form > Design mode
3. Insert a form control (i.e. Text Box)
4. Right-click on field

Result: LO hangs.

On loading the document, I see in the console:

warn:xmloff:51302:51302:xmloff/source/draw/shapeimport.cxx:352: unknown attribute urn:oasis:names:tc:opendocument:xmlns:text:1.0 text:anchor-type value=as-char
warn:sal.osl:51302:51302:sal/osl/unx/module.cxx:103: dlopen(/opt/libreofficedev7.6/program/libjava_gcc3.so, 257): /opt/libreofficedev7.6/program/libjava_gcc3.so: cannot open shared object file: No such file or directory
warn:sal.osl:51302:51302:sal/osl/unx/module.cxx:103: dlopen(/opt/libreofficedev7.6/program/libgcc3_java.so, 257): /opt/libreofficedev7.6/program/libgcc3_java.so: cannot open shared object file: No such file or directory
warn:forms.component:51302:51302:forms/source/component/DatabaseForm.cxx:2805: DBG_UNHANDLED_EXCEPTION in implEnsureConnection exception: com.sun.star.container.NoSuchElementException message: "/home/stragu/Documents/dev/LibreOffice/testing_bugs/example_data/example_database.odb at /home/tdf/lode/jenkins/workspace/lo_gerrit/tb/src_master/dbaccess/source/core/dataaccess/databasecontext.cxx:292"
warn:legacy.osl:51302:51302:forms/source/helper/windowstateguard.cxx:181: WindowStateGuard_Impl::disposing: where does this come from?

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 508a610808631bc292a8daf4f78bd8726b2d56be
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Also with gen VCL, and on Windows.

Bibisected with linux-64-7.6 repo to first bad commit 142efa4b9f8f408ec0142d1b4b40f0b8555c7036 which points to:

commit 5032262fccd0ef7f274323ae481b3230ffd42d3a
author	Noel Grandin <noel.grandin@collabora.co.uk>	Tue Feb 21 15:05:37 2023 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	Wed Feb 22 13:24:47 2023 +0000
tree 5f8c69e47764a907faf497c1c6932cf3962e3ddb
parent 47cd9b65efa662719950866ab9c45fb3f130e1b4
BaseMutex->std::mutex in PopupMenuControllerBase
Change-Id: I26877ac7b6e5e39f511418d978199189c62cca6c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147416

Noel, can you please have a look?
Comment 1 Commit Notification 2023-02-28 06:28:52 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/394dcb830c9d7bfe3a454589847be0fd5024dc86

tdf#153857 Writer hangs right-clicking on form field

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.