tdf#153857 Writer hangs right-clicking on form field

regression from
    commit 5032262fccd0ef7f274323ae481b3230ffd42d3a
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Tue Feb 21 15:05:37 2023 +0200
    BaseMutex->std::mutex in PopupMenuControllerBase

Change-Id: I01bdab09ac0ce1d9b35ed45ad36d1c5179702c6c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147920
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>